<resources>
    <string name="app_name">Access Movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opps_result_could_not_be_loaded_str">load_state_message</string>
    <string name="retry_str">retry_str</string>

    <string name="onboarding1_title_str">Get The First Movie And TV Information</string>
    <string name="profile_page">Profile Page</string>
    <string name="dummy_text_desc_tv">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="title_str">Title</string>
    <string name="genre_str">Genre</string>
    <string name="rating_str">Rating</string>
    <string name="country_str">Country</string>
    <string name="release_date_str">Release date</string>
    <string name="ticket_price_str">Ticket Price</string>
    <string name="description_str">Description</string>
    <string name="add_photo_str">Add Photo</string>
    <string name="add_movie_str">Add Movie</string>
    <string name="add_movie_str_major">ADD MOVIE</string>
    <string name="price_str">Price: $</string>
    <string name="sign_in_str">Sign In</string>
    <string name="rating_str_item">Rating:</string>
    <string name="genre_str_item">Genre:</string>
    <string name="access_movies_str">ACCESS MOVIES</string>
    <string name="sign_out_str">Sign Out</string>
    <string name="select_genre_str">Select Genre</string>
    <string name="action_str">Action</string>
    <string name="comedy_str">Comedy</string>
    <string name="drama_str">Drama</string>
    <string name="fantasy_str">Fantasy</string>
    <string name="horror_str">Horror</string>
    <string name="mystery_str">Mystery</string>
    <string name="romance_str">Romance</string>
    <string name="thriller_str">Thriller</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments:</string>
    <string name="desciption">Desciption:</string>
    <string name="action">Action</string>
    <string name="genres">Genres:</string>
    <string name="release_date">Release Date</string>
    <string name="year">2020</string>
    <string name="country">Country</string>
    <string name="nigeria">Nigeria</string>
    <string name="ratings">Rating</string>
    <string name="_5_0">5.0</string>
    <string name="comment_name">Name</string>
    <string name="comment_body">Comment</string>
    <string name="omo_this_movie_dope_die_str">Omo! This movie dope die!!</string>
    <string name="daniel_str">Daniel</string>
    <string name="ticket_price_title">Ticket Price</string>
    <string name="ticket_price_default">100</string>
    <string name="next">Next</string>
    <string name="onboarding2_title_str">Know Which Movie Is Worth Watching</string>
    <string name="onboarding3_title_str">Real Time Updates Of Movies</string>

    <!--    array for rating spinner -->
    <string-array name="rating">
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
    </string-array>

    <string-array name="country">
        <item> Nigeria </item>
        <item> France </item>
        <item> United States </item>
        <item> China </item>
        <item> Spain </item>
    </string-array>


</resources>