<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddMovieFragment">


     <EditText
            android:id="@+id/fragment_add_movie_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_str"
            android:padding="10dp"
            android:background="@drawable/add_movie_button_border"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" />

    <EditText
            android:id="@+id/fragment_add_movie_genre_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/genre_str"
            android:padding="10dp"
           android:background="@drawable/add_movie_button_border"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_title_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0" />

    <EditText
            android:id="@+id/fragment_add_movie_ratings_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rating_str"
            android:padding="10dp"
            android:background="@drawable/add_movie_button_border"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_genre_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0" />

    <EditText
            android:id="@+id/fragment_add_movie_country_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country_str"
            android:padding="10dp"
        android:background="@drawable/add_movie_button_border"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_ratings_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0" />

    <EditText
            android:id="@+id/fragment_add_movie_release_date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/release_date_str"
            android:padding="10dp"
        android:background="@drawable/add_movie_button_border"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_country_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0" />

    <EditText
            android:id="@+id/fragment_add_movie_ticket_price_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ticket_price_str"
            android:padding="10dp"
        android:background="@drawable/add_movie_button_border"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_release_date_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0" />

    <EditText
            android:id="@+id/fragment_add_movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_str"
            android:padding="10dp"
            android:background="@drawable/add_movie_button_border"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_ticket_price_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/fragment_add_movie_up_photo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:paddingStart="30dp"
        android:paddingTop="15dp"
        android:paddingEnd="30dp"
        android:paddingBottom="15dp"
        android:text="@string/add_photo_str"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_description" />

    <Button
        android:id="@+id/fragment_add_movie_add_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:paddingStart="50dp"
        android:paddingTop="15dp"
        android:paddingEnd="50dp"
        android:paddingBottom="15dp"
        android:text="@string/add_movie_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_add_movie_up_photo_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>